Added Forgot password and signin APIs
